based on last year, the rest of the initial page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,51 @@
         <ul></ul>
       </nav>
       <section>
-        <h2>
+
+<h2>
+<a id="abstract" class="anchor" href="#abstract" aria-hidden="true"><span class="octicon octicon-link"></span></a>Abstract</h2>
+
+<p><a href="http://llvm.org/">LLVM</a>, winner of the <a href="http://awards.acm.org/software_system/">2012 ACM Software System Award</a>, has become an integral part of the software-development ecosystem for optimizing compilers, dynamic-language execution engines, source-code analysis and transformation tools, debuggers and linkers, and a whole host of programming-language and toolchain-related components. Now heavily used in both academia and industry, where it allows for rapid development of production-quality tools, LLVM is increasingly used in work targeted at high-performance computing. Research in and implementation of programming-language analysis, compilation, execution and profiling has clearly benefited from the availability of a high-quality, freely-available infrastructure on which to build. This workshop will focus on recent developments, from both academia and industry, that build on LLVM to advance the state of the art in high-performance computing.</p>
+
+<p>This workshop is held in cooperation with: <img height="80" src="https://raw.githubusercontent.com/LLVM-HPC3-Workshop/LLVM-HPC3-Workshop.github.io/master/images/SIGhpc_thumbnail.png" width="200" /></p>
+
+<h2>
+<a id="format" class="anchor" href="#format" aria-hidden="true"><span class="octicon octicon-link"></span></a>Format</h2>
+
+<p>This workshop will feature contributed papers, invited talks, and panel discussions focusing on recent developments, from both academia and industry, that build on LLVM to advance the state of the art in high-performance computing.</p>
+
+<p>Topics of interest include, but are not limited to: </p>
+
+<ul>
+<li>Compiler design for highly-concurrent/parallel environments</li>
+<li>Compilation techniques targeted at high-performance computing codes</li>
+<li>Programming-language implementation techniques enabling high performance and high productivity</li>
+<li>Embedding compilation and dynamic execution at scale</li>
+<li>Tools for optimization, profiling and feedback</li>
+<li>Source code transformation and analysis</li>
+</ul>
+
+<h2>
+<a id="deadlines" class="anchor" href="#deadlines" aria-hidden="true"><span class="octicon octicon-link"></span></a>Deadlines</h2>
+
+<ul>
+<li>Paper submissions due: September 1, 2016</li>
+<li>Notification to authors of acceptance: September 28, 2016</li>
+<li>Camera-ready papers due: October 11, 2016</li>
+<li>Workshop takes place: November 14, 2016</li>
+</ul>
+
+<p>Please see <a href="http://sc16.supercomputing.org/">the SC16 home page</a> for registration deadlines and other information associated with the parent event.</p>
+
+<h2>
+<a id="submissions" class="anchor" href="#submissions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Submissions</h2>
+
+<p>We are using <a href="https://www.easychair.org">EasyChair</a> to manage submissions. Please submit papers to <a href="https://easychair.org/conferences/?conf=llvmhpc3">llvmhpc3</a>.  The <a href="http://www.acm.org/sigs/publications/proceedings-templates">ACM SIG Proceedings Templates</a> should be used.</p>
+
+<h2>
+<a id="proceedings" class="anchor" href="#proceedings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Proceedings</h2>
+
+<p>The proceedings will be archived in both the ACM Digital Library and IEEE Xplore through <a href="http://www.sighpc.org/events/collaboration/scworkshops">SIGHPC</a>.</p>
 
 <h2>
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Organizers</h2>
@@ -40,6 +84,38 @@
 <ul>
 <li>Hal Finkel, Argonne National Laboratory</li>
 </ul>
+
+<h2>
+<a id="program-committee" class="anchor" href="#program-committee" aria-hidden="true"><span class="octicon octicon-link"></span></a>Program Committee</h2>
+
+<table>
+<thead>
+<tr>
+<th>Name</th>
+<th>Affiliation</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>Andrew Trick</td><td>Apple</td></tr>
+<tr><td>Cameron McInally</td><td>Cray</td></tr>
+<tr><td>Chandler Carruth</td><td>Google</td></tr>
+<tr><td>Erik Schnetter</td><td>Perimeter Institute for Theoretical Physics</td></tr>
+<tr><td>Frank Winter</td><td>Thomas Jefferson National Accelerator Facility</td></tr>
+<tr><td>Gary Funck</td><td>Intrepid Technology</td></tr>
+<tr><td>James Brodman</td><td>Intel</td></tr>
+<tr><td>Jeff Hammond</td><td>Intel</td></tr>
+<tr><td>Jim Cownie</td><td>Intel</td></tr>
+<tr><td>John Mellor-Crummey</td><td>Rice University</td></tr>
+<tr><td>Keno Fischer</td><td>Harvard University</td></tr>
+<tr><td>Michael Wong</td><td>Codeplay</td></tr>
+<tr><td>Nadav Rotem</td><td>Apple</td></tr>
+<tr><td>Pat McCormick</td><td>Los Alamos National Laboratory</td></tr>
+<tr><td>Ralf Karrenberg</td><td>Saarland University</td></tr>
+<tr><td>Sameer Shende</td><td>University of Oregon</td></tr>
+<tr><td>Tobias Grosser</td><td>ETH Zürich</td></tr>
+<tr><td>Torsten Hoefler</td><td>ETH Zürich</td></tr>
+</tbody>
+</table>
 
 <h2>
 <a id="contact-information" class="anchor" href="#contact-information" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact Information</h2>
