update Keno's affil

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <tr><td>Jeff Hammond</td><td>Intel</td></tr>
 <tr><td>Jim Cownie</td><td>Intel</td></tr>
 <tr><td>John Mellor-Crummey</td><td>Rice University</td></tr>
-<tr><td>Keno Fischer</td><td>Harvard University</td></tr>
+<tr><td>Keno Fischer</td><td>Julia Computing, Inc.</td></tr>
 <tr><td>Michael Wong</td><td>Codeplay</td></tr>
 <tr><td>Nadav Rotem</td><td>Apple</td></tr>
 <tr><td>Pat McCormick</td><td>Los Alamos National Laboratory</td></tr>
