Extend deadline to the 8th

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <a id="deadlines" class="anchor" href="#deadlines" aria-hidden="true"><span class="octicon octicon-link"></span></a>Deadlines</h2>
 
 <ul>
-<li>Paper submissions due: September 1, 2016</li>
+<li>Paper submissions due: <del>September 1, 2016</del> Extended to: September 8, 2016</li></li>
 <li>Notification to authors of acceptance: September 28, 2016</li>
 <li>Camera-ready papers due: October 11, 2016</li>
 <li>Workshop takes place: November 14, 2016</li>
