Ralf is at NVIDIA now

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <tr><td>Michael Wong</td><td>Codeplay</td></tr>
 <tr><td>Nadav Rotem</td><td>Apple</td></tr>
 <tr><td>Pat McCormick</td><td>Los Alamos National Laboratory</td></tr>
-<tr><td>Ralf Karrenberg</td><td>Saarland University</td></tr>
+<tr><td>Ralf Karrenberg</td><td>NVIDIA</td></tr>
 <tr><td>Sameer Shende</td><td>University of Oregon</td></tr>
 <tr><td>Tobias Grosser</td><td>ETH Zürich</td></tr>
 <tr><td>Torsten Hoefler</td><td>ETH Zürich</td></tr>
