Update Nadav's affil

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <tr><td>John Mellor-Crummey</td><td>Rice University</td></tr>
 <tr><td>Keno Fischer</td><td>Julia Computing, Inc.</td></tr>
 <tr><td>Michael Wong</td><td>Codeplay</td></tr>
-<tr><td>Nadav Rotem</td><td>Apple</td></tr>
+<tr><td>Nadav Rotem</td><td>Facebook</td></tr>
 <tr><td>Pat McCormick</td><td>Los Alamos National Laboratory</td></tr>
 <tr><td>Ralf Karrenberg</td><td>NVIDIA</td></tr>
 <tr><td>Sameer Shende</td><td>University of Oregon</td></tr>
