Add talks and schedule

--- a/index.html
+++ b/index.html
@@ -33,6 +33,101 @@
       </nav>
       <section>
 
+        <h2>
+<a id="agenda" class="anchor" href="#agenda" aria-hidden="true"><span class="octicon octicon-link"></span></a>Agenda</h2>
+
+<table>
+<thead>
+<tr>
+<th>Time</th>
+<th>Speaker</th>
+<th>Title</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>9:00</td>
+<td>Hal Finkel</td>
+<td>Welcome</td>
+</tr>
+<tr>
+<td>9:15</td>
+<td>Douglas Miles</td>
+<td>Keynote: <a href="talks.html#miles"><i>TBA</i></a> <!--<a href="slides/Miles.pdf">[slides]</a>--></td>
+</tr>
+<tr>
+<td>10:00</td>
+<td>Coffee</td>
+<td>Break</td>
+</tr>
+<tr>
+<td>10:30</td>
+<td>Samuel Antao</td>
+<td><a href="talks.html#antao">Offloading Support for OpenMP in Clang and LLVM</a> <!--<a href="slides/Antao.pdf">[slides]</a>--></td>
+</tr>
+<tr>
+<td>11:00</td>
+<td>Dounia Khaldi</td>
+<td><a href="talks.html#khaldi">Towards Automatic HBM Allocation using LLVM: A Case Study with Knights Landing</a> <!--<a href="slides/Khaldi.pdf">[slides]</a>--></td>
+</tr>
+<tr>
+<td>11:30</td>
+<td>Xinmin Tian</td>
+<td><a href="talks.html#tian">LLVM Framework and IR Extensions for Parallelization, SIMD Vectorization and Offloading</a> <!--<a href="slides/Tian.pdf">[slides]</a>--></td>
+</tr>
+<tr>
+<td>12:00</td>
+<td>Nick Moss</td>
+<td><a href="talks.html#moss">The ARES High-level Intermediate Representation</a> <!--<a href="slides/Moss.pdf">[slides]</a>--></td>
+</tr>
+<tr>
+<td>12:30</td>
+<td>N/A</td>
+<td>Lunch</td>
+</tr>
+<tr>
+<td>2:00</td>
+<td>Torsten Hoefler</td>
+<td><a href="talks.html#hoefler">Polly-ACC: Transparent compilation to heterogeneous hardware</a> <!--<a href="slides/Hoefler.pdf">[slides]</a>--></td>
+</tr>
+<tr>
+<td>2:30</td>
+<td>Travis Walton</td>
+<td><a href="talks.html#walton">LLVM at ARM</a> <!--<a href="slides/Walton.pdf">[slides]</a>--></td>
+</tr>
+<tr>
+<td>3:00</td>
+<td>Coffee</td>
+<td>Break</td>
+</tr>
+<tr>
+<td>3:30</td>
+<td>Dmitry Denisenko</td>
+<td><a href="talks.html#denisenko">Targeting FPGAs with an LLVM compiler</a> <!--<a href="slides/Denisenko.pdf">[slides]</a>--></td>
+</tr>
+<tr>
+<td>4:00</td>
+<td>Hongbin Zheng</td>
+<td><a href="talks.html#zheng">Optimizing OpenCL Applications for FPGAs</a> <!--<a href="slides/Zheng.pdf">[slides]</a>--></td>
+</tr>
+<tr>
+<td>4:30</td>
+<td>Steven Watanabe</td>
+<td><a href="talks.html#watanabe">UPC to C Translator</a> <!--<a href="slides/Watanabe.pdf">[slides]</a>--></td>
+</tr>
+<tr>
+<td>5:00</td>
+<td>Panel Discussion</td>
+<td></td>
+</tr>
+<tr>
+<td>5:30</td>
+<td>The</td>
+<td>End</td>
+</tr>
+</tbody>
+</table>
+
 <h2>
 <a id="abstract" class="anchor" href="#abstract" aria-hidden="true"><span class="octicon octicon-link"></span></a>Abstract</h2>
 
