Add Steven also

--- a/talks.html
+++ b/talks.html
@@ -37,7 +37,7 @@
 
 <a class="anchor" name="miles" aria-hidden="true"></a>
 <h3>Keynote: Integrating LLVM with the PGI Fortran, C and C++ compilers</h3>
-<h4>Douglas Miles</h4>
+<h4>Douglas Miles and Steven Scalpone</h4>
 
 <p>PGI Fortran, C and C++ compilers have been widely-used on Linux/x86 HPC systems and clusters for nearly 20 years, and more recently on heterogeneous GPU-enabled platforms and OpenPOWER CPUs. Over the past 3 years, these compilers have been re-designed to integrate LLVM for low-level optimization and code generation on both GPUs and multicore CPUs, retaining the PGI optimizer for high-level optimizations, vectorization, parallelization and GPU offloading. This work has evolved to include a joint project with the US DOE to create an open source Fortran language front-end designed for integration with LLVM. This talk will cover the current status and capabilities of the PGI+LLVM compilers, our experiences integrating LLVM into a production HPC compiler infrastructure, and plans and priorities for future development.</p>
 
