Add Alexandre to talks

--- a/talks.html
+++ b/talks.html
@@ -68,7 +68,7 @@
 
 <a class="anchor" name="zheng" aria-hidden="true"></a>
 <h3>Optimizing OpenCL Applications for FPGAs</h3>
-<h4>Hongbin Zheng</h4>
+<h4>Hongbin Zheng and Alexandre Isoard</h4>
 
 <p>There is increasing interest in using FPGA-based accelerators in high-performance computing as FGPA-based accelerators have shown better performance and energy-efficiency over other general purpose processors like CPUs and GPGPUs, without scarifying the flexibility.</p>
 
