Add Carlo's slides

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <tr>
 <td>10:30</td>
 <td>Carlo Bertolli</td>
-<td><a href="talks.html#antao">Offloading Support for OpenMP in Clang and LLVM</a> <!--<a href="slides/Antao.pdf">[slides]</a>--></td>
+<td><a href="talks.html#antao">Offloading Support for OpenMP in Clang and LLVM</a> <a href="slides/Bertolli.pdf">[slides]</a></td>
 </tr>
 <tr>
 <td>11:00</td>
