Add Nick's slides

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <tr>
 <td>12:00</td>
 <td>Nick Moss</td>
-<td><a href="talks.html#moss">The ARES High-level Intermediate Representation</a> <!--<a href="slides/Moss.pdf">[slides]</a>--></td>
+<td><a href="talks.html#moss">The ARES High-level Intermediate Representation</a> <a href="slides/Moss.pdf">[slides]</a></td>
 </tr>
 <tr>
 <td>12:30</td>
