Add Dounia's slides

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <tr>
 <td>11:00</td>
 <td>Dounia Khaldi</td>
-<td><a href="talks.html#khaldi">Towards Automatic HBM Allocation using LLVM: A Case Study with Knights Landing</a> <!--<a href="slides/Khaldi.pdf">[slides]</a>--></td>
+<td><a href="talks.html#khaldi">Towards Automatic HBM Allocation using LLVM: A Case Study with Knights Landing</a> <a href="slides/Khaldi.pdf">[slides]</a></td>
 </tr>
 <tr>
 <td>11:30</td>
