Add Hongbin's slides

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <tr>
 <td>4:00</td>
 <td>Hongbin Zheng</td>
-<td><a href="talks.html#zheng">Optimizing OpenCL Applications for FPGAs</a> <!--<a href="slides/Zheng.pdf">[slides]</a>--></td>
+<td><a href="talks.html#zheng">Optimizing OpenCL Applications for FPGAs</a> <a href="slides/Zheng.pptx">[slides]</a></td>
 </tr>
 <tr>
 <td>4:30</td>
