Add Doug's talk

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <tr>
 <td>9:15</td>
 <td>Douglas Miles</td>
-<td>Keynote: <a href="talks.html#miles">Integrating LLVM with the PGI Fortran, C and C++ compilers</a> <!--<a href="slides/Miles.pdf">[slides]</a>--></td>
+<td>Keynote: <a href="talks.html#miles">Integrating LLVM with the PGI Fortran, C and C++ compilers</a> <a href="slides/Miles.pdf">[slides]</a></td>
 </tr>
 <tr>
 <td>10:00</td>
