Add Torsten's slides

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <tr>
 <td>2:00</td>
 <td>Torsten Hoefler</td>
-<td><a href="talks.html#hoefler">Polly-ACC: Transparent compilation to heterogeneous hardware</a> <!--<a href="slides/Hoefler.pdf">[slides]</a>--></td>
+<td><a href="talks.html#hoefler">Polly-ACC: Transparent compilation to heterogeneous hardware</a> <a href="slides/Hoefler.pdf">[slides]</a></td>
 </tr>
 <tr>
 <td>2:30</td>
