--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <tr>
 <td>11:30</td>
 <td>Xinmin Tian</td>
-<td><a href="talks.html#tian">LLVM Framework and IR Extensions for Parallelization, SIMD Vectorization and Offloading</a> <!--<a href="slides/Tian.pdf">[slides]</a>--></td>
+<td><a href="talks.html#tian">LLVM Framework and IR Extensions for Parallelization, SIMD Vectorization and Offloading</a> <a href="slides/Tian.pdf">[slides]</a></td>
 </tr>
 <tr>
 <td>12:00</td>
