Add link to proceedings

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <h2>
 <a id="proceedings" class="anchor" href="#proceedings" aria-hidden="true"><span class="octicon octicon-link"></span></a>Proceedings</h2>
 
-<p>The proceedings will be archived in both the ACM Digital Library and IEEE Xplore through <a href="http://www.sighpc.org/events/collaboration/scworkshops">SIGHPC</a>.</p>
+<p>The <a href="http://conferences.computer.org/llvmhpc/2016">proceedings</a> will be archived in both the ACM Digital Library and IEEE Xplore through <a href="http://www.sighpc.org/events/collaboration/scworkshops">SIGHPC</a>.</p>
 
 <h2>
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Organizers</h2>
